change jvm args